# projetotopicosavancados

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTACAO_WEBSOCKET.md  README - Copia.md  README.md  commitlint.config.js  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  package.json  prometheus.yml  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  docker-build.yml  release-please.yml  sonar.yml
api_rest/: admin.py  apps.py  authentication.py  cache.py  channels_middleware.py  commands.py  consumers.py  event_command_service.py  health_checks.py  logging_utils.py  middleware.py  models.py  notifications.py  order_events.py  permissions.py  rabbitmq.py  read_models.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  views.py
api_rest/api_topicos/: asgi.py  settings.py  urls.py
api_rest/commands/: event_commands.py  user_commands.py
api_rest/migrations/: 0001_initial.py  0002_user_password.py  0003_event.py  0004_cart_order_orderitem_cartitem.py  0005_alter_event_max_participants_alter_user_password_and_more.py  0005_alter_event_max_participants_and_more.py  0006_create_event_read_model.py  0008_user_is_admin.py  (+2 more)
api_topicos/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
event_platform/: app.py
evidence/: order_status.json  processed_events.txt  rabbitmq_queue.json  worker_logs.txt
templates/: detalhe_pedido.html  swagger-ui.html
tests/: conftest.py
(+49 files in other folders)
